fixed the datepicker spacing issue on money flow inline edits
Related Work Items: #9146

--- a/App/ECA.WebApp.AngularJS/styles/_form.scss
+++ b/App/ECA.WebApp.AngularJS/styles/_form.scss
@@ -172,3 +172,6 @@ label {
 div.input-group td:first-child {
     padding: 0;
 }
+p.input-group td:first-child {
+    padding: 0;
+}
